--- a/html/Main.html
+++ b/html/Main.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -14,23 +14,23 @@
         <div class="nav">
             <div>
                 <a href="" class="menu">
-                    <img src="/images/menu.png" alt="" />
+                    <img src="../images/menu.png" alt="" />
                 </a>
                 <a href="" class="stat">
-                    <img src="/images/stat.png" alt="" />
+                    <img src="../images/stat.png" alt="" />
                 </a>
                 <a href="">
-                    <img src="/images/prev.png" alt="" />
+                    <img src="../images/prev.png" alt="" />
                 </a>
                 <a href="" style="font-size: 25px; font-weight: bold; margin: 0 5px;">2025년 01월</a>
                 <a href="">
-                    <img src="/images/next.png" alt="" />
+                    <img src="../images/next.png" alt="" />
                 </a>
                 <a href="Search.html" class="search">
-                    <img src="/images/search.png" alt="" />
+                    <img src="../images/search.png" alt="" />
                 </a>
                 <a href="Option.html" class="option">
-                    <img src="/images/option.png" alt="" />
+                    <img src="../images/option.png" alt="" />
                 </a>
             </div>
         </div>
@@ -106,7 +106,7 @@
             </div>
             <div class="memo_section">
                 <div class="memo">
-                    <img src="/images/food.svg" alt="" width="30" height="30" />
+                    <img src="../images/food.svg" alt="" width="30" height="30" />
                     <div class="memo_con">
                         <h4 style="float: left;">식비</h4>
                         <h5 style="margin-left: 24px; clear: left; display: inline;">카드</h5>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="memo">
-                    <img src="/images/food.svg" alt="" width="30" height="30" />
+                    <img src="../images/food.svg" alt="" width="30" height="30" />
                     <div class="memo_con">
                         <h4 style="float: left;">식비</h4>
                         <h5 style="margin-left: 24px; clear: left; display: inline;">카드</h5>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="memo">
-                    <img src="/images/food.svg" alt="" width="30" height="30" />
+                    <img src="../images/food.svg" alt="" width="30" height="30" />
                     <div class="memo_con">
                         <h4 style="float: left;">식비</h4>
                         <h5 style="margin-left: 24px; clear: left; display: inline;">카드</h5>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="memo">
-                    <img src="/images/food.svg" alt="" width="30" height="30" />
+                    <img src="../images/food.svg" alt="" width="30" height="30" />
                     <div class="memo_con">
                         <h4 style="float: left;">식비</h4>
                         <h5 style="margin-left: 24px; clear: left; display: inline;">카드</h5>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="memo">
-                    <img src="/images/food.svg" alt="" width="30" height="30" />
+                    <img src="../images/food.svg" alt="" width="30" height="30" />
                     <div class="memo_con">
                         <h4 style="float: left;">식비</h4>
                         <h5 style="margin-left: 24px; clear: left; display: inline;">카드</h5>
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="memo">
-                    <img src="/images/food.svg" alt="" width="30" height="30" />
+                    <img src="../images/food.svg" alt="" width="30" height="30" />
                     <div class="memo_con">
                         <h4 style="float: left;">식비</h4>
                         <h5 style="margin-left: 24px; clear: left; display: inline;">카드</h5>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="memo">
-                    <img src="/images/food.svg" alt="" width="30" height="30" />
+                    <img src="../images/food.svg" alt="" width="30" height="30" />
                     <div class="memo_con">
                         <h4 style="float: left;">식비</h4>
                         <h5 style="margin-left: 24px; clear: left; display: inline;">카드</h5>
@@ -164,7 +164,7 @@
             </div>
         </div>
         <div class="plus">
-            <img src="/images/plus.png" alt="">
+            <img src="../images/plus.png" alt="">
         </div>
     </div>
 
