--- a/html/Search.html
+++ b/html/Search.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/search.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/search.css">
 </head>
 
 <body>
     <div class="container">
         <div class="nav">
             <a href="Main.html" style="display: block; width: 30px; height: 30px; text-align: center;">
-                <img src="/images/back.png" alt="" class="back" width="24" height="24" style="margin-top: 3px;">
+                <img src="../images/back.png" alt="" class="back" width="24" height="24" style="margin-top: 3px;">
             </a>
             <input type="text" name="" id="" placeholder="메모 검색">
         </div>
@@ -33,97 +33,97 @@
                     <div class="export_select">
                         <input type="checkbox" name="" id="food">
                         <label for="food">
-                            <img src="/images/food.png" alt="">
+                            <img src="../images/food.png" alt="">
                             <p>식비</p>
                         </label>
                         <input type="checkbox" name="" id="trafic">
                         <label for="trafic">
-                            <img src="/images/trafic.png" alt="">
+                            <img src="../images/trafic.png" alt="">
                             <p>교통/자동차</p>
                         </label>
                         <input type="checkbox" name="" id="deesert">
                         <label for="deesert">
-                            <img src="/images/deesert.png" alt="">
+                            <img src="../images/deesert.png" alt="">
                             <p>카페/간식</p>
                         </label>
                         <input type="checkbox" name="" id="culture">
                         <label for="culture">
-                            <img src="/images/culture.png" alt="">
+                            <img src="../images/culture.png" alt="">
                             <p>문화/여가</p>
                         </label>
                         <input type="checkbox" name="" id="date">
                         <label for="date">
-                            <img src="/images/date.png" alt="">
+                            <img src="../images/date.png" alt="">
                             <p>데이트</p>
                         </label>
                         <input type="checkbox" name="" id="friend">
                         <label for="friend">
-                            <img src="/images/friend.png" alt="">
+                            <img src="../images/friend.png" alt="">
                             <p>우정/술/유흥</p>
                         </label>
                         <input type="checkbox" name="" id="familly">
                         <label for="familly">
-                            <img src="/images/familly.png" alt="">
+                            <img src="../images/familly.png" alt="">
                             <p>가족</p>
                         </label>
                         <input type="checkbox" name="" id="gift">
                         <label for="gift">
-                            <img src="/images/gift.png" alt="">
+                            <img src="../images/gift.png" alt="">
                             <p>경조/선물</p>
                         </label>
                         <input type="checkbox" name="" id="mart">
                         <label for="mart">
-                            <img src="/images/mart.png" alt="">
+                            <img src="../images/mart.png" alt="">
                             <p>생활</p>
                         </label>
                         <input type="checkbox" name="" id="beauty">
                         <label for="beauty">
-                            <img src="/images/beauty.png" alt="">
+                            <img src="../images/beauty.png" alt="">
                             <p>패션/뷰티</p>
                         </label>
                         <input type="checkbox" name="" id="travel">
                         <label for="travel">
-                            <img src="/images/travel.png" alt="">
+                            <img src="../images/travel.png" alt="">
                             <p>여행/숙박</p>
                         </label>
                         <input type="checkbox" name="" id="save">
                         <label for="save">
-                            <img src="/images/save.png" alt="">
+                            <img src="../images/save.png" alt="">
                             <p>금융/투자</p>
                         </label>
                         <input type="checkbox" name="" id="education">
                         <label for="education">
-                            <img src="/images/education.png" alt="">
+                            <img src="../images/education.png" alt="">
                             <p>교육/학습</p>
                         </label>
                         <input type="checkbox" name="" id="hospital">
                         <label for="hospital">
-                            <img src="/images/hospital.png" alt="">
+                            <img src="../images/hospital.png" alt="">
                             <p>의료/건강</p>
                         </label>
                         <input type="checkbox" name="" id="exer">
                         <label for="exer">
-                            <img src="/images/exer.png" alt="">
+                            <img src="../images/exer.png" alt="">
                             <p>운동</p>
                         </label>
                         <input type="checkbox" name="" id="phone">
                         <label for="phone">
-                            <img src="/images/phone.png" alt="">
+                            <img src="../images/phone.png" alt="">
                             <p>통신/주거</p>
                         </label>
                         <input type="checkbox" name="" id="insurance">
                         <label for="insurance">
-                            <img src="/images/insurance.png" alt="">
+                            <img src="../images/insurance.png" alt="">
                             <p>보험</p>
                         </label>
                         <input type="checkbox" name="" id="subscribe">
                         <label for="subscribe">
-                            <img src="/images/subscribe.png" alt="">
+                            <img src="../images/subscribe.png" alt="">
                             <p>구독</p>
                         </label>
                         <input type="checkbox" name="" id="other">
                         <label for="other">
-                            <img src="/images/other.png" alt="">
+                            <img src="../images/other.png" alt="">
                             <p>기타</p>
                         </label>
                     </div>
@@ -135,37 +135,37 @@
                     <div class="import_select">
                         <input type="checkbox" name="" id="salary">
                         <label for="salary">
-                            <img src="/images/salary.png" alt="">
+                            <img src="../images/salary.png" alt="">
                             <p>월급</p>
                         </label>
                         <input type="checkbox" name="" id="addin">
                         <label for="addin">
-                            <img src="/images/addin.png" alt="">
+                            <img src="../images/addin.png" alt="">
                             <p>부수입</p>
                         </label>
                         <input type="checkbox" name="" id="pin">
                         <label for="pin">
-                            <img src="/images/pin.png" alt="">
+                            <img src="../images/pin.png" alt="">
                             <p>용돈</p>
                         </label>
                         <input type="checkbox" name="" id="bonus">
                         <label for="bonus">
-                            <img src="/images/bonus.png" alt="">
+                            <img src="../images/bonus.png" alt="">
                             <p>보너스</p>
                         </label>
                         <input type="checkbox" name="" id="cashback">
                         <label for="cashback">
-                            <img src="/images/cashback.png" alt="">
+                            <img src="../images/cashback.png" alt="">
                             <p>캐시백</p>
                         </label>
                         <input type="checkbox" name="" id="dutchpay">
                         <label for="dutchpay">
-                            <img src="/images/dutchpay.png" alt="">
+                            <img src="../images/dutchpay.png" alt="">
                             <p>더치페이</p>
                         </label>
                         <input type="checkbox" name="" id="other2">
                         <label for="other2">
-                            <img src="/images/other.png" alt="">
+                            <img src="../images/other.png" alt="">
                             <p>기타</p>
                         </label>
                     </div>
