--- a/html/Main.html
+++ b/html/Main.html
@@ -16,7 +16,7 @@
                 <a href="" class="menu">
                     <img src="../images/menu.png" alt="" />
                 </a>
-                <a href="" class="stat">
+                <a href="month.html" class="stat">
                     <img src="../images/stat.png" alt="" />
                 </a>
                 <a href="">
