--- a/html/Option.html
+++ b/html/Option.html
@@ -16,6 +16,9 @@
                 <img src="../images/back.png" alt="" class="back" width="24" height="24" style="margin-top: 3px;">
             </a>
         </div>
+        <div class="ad">
+            <a href="https://apps.apple.com/kr/app/%EA%BC%AC%EB%B0%95%EA%B0%80%EA%B3%84%EB%B6%80-%EC%9E%AC%EC%A0%95%EA%B4%80%EB%A6%AC%EB%8F%84-%EA%BC%AC%EB%B0%95%EA%B0%80%EA%B3%84%EB%B6%80/id6460690098">꼬박 가계부</a>
+        </div>
         <div class="contents">
             <div class="section1">
                 <ul>
