--- a/html/year.html
+++ b/html/year.html
@@ -13,7 +13,7 @@
     <div id="app">
         <div id="navbar">
             <div id="nav1">
-                <i class="fa-solid fa-xmark fa-2x" style="cursor: pointer;"></i>
+                <a href="Main.html"><i class="fa-solid fa-xmark fa-2x" style="cursor: pointer;"></i></a>
             </div>
 
             <div id="nav2">
